--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
 
                         <div class="slidecard-content-heading slidecard-content-heading-1">01/ Planen</div>
 
-                        <div class="slidecard-content-text slidecard-content-text-1">In der Planungsphase werden
-                            die Grundlagen für den weiteren standardisierbaren Prozess geschaffen. Durch
+                        <div class="slidecard-content-text slidecard-content-text-1">In der Planungsphase werden die
+                            Grundlagen für den weiteren standardisierbaren Prozess geschaffen. Durch
                             Kollisionsprüfungen, VR-Nutzung und Bauablaufsimulationen werden Fehler frühzeitig
-                            ausgeschlossen.</div>
+                            ausgeschlossen und die Bauherrschaft bestmöglich miteinbezogen.​</div>
 
 
                     </div>
@@ -324,8 +324,10 @@
                         <div class="slidecard-content-heading slidecard-content-heading-1">02/ Bauen</div>
 
                         <div class="slidecard-content-text slidecard-content-text-1">Die zuvor durchgeführten
-                            Simulationen sorgen für Bauprojekte mit höherer Qualität und geringeren Kosten.
-                            Darüber hinaus lässt sich der Baufortschritt Ihres Vorhabens bestmöglich überwachen.
+                            Simulationen sorgen für Bauprojekte mit höherer Qualität und geringeren Kosten. Darüber
+                            hinaus lässt sich der Baufortschritt Ihres Vorhabens bestmöglich überwachen und die
+                            Datengrundlage für ein digitales Scheckheft Ihres Vorhabens
+                            aufbauen.
                         </div>
 
 
@@ -336,10 +338,10 @@
 
                         <div class="slidecard-content-heading slidecard-content-heading-1">03/ Betreiben</div>
 
-                        <div class="slidecard-content-text slidecard-content-text-1">Die standardisierten
-                            digitalen 3D-Modelle bilden die Grundlagen für eine automatisierte Verwaltung der
-                            Gebäude. Dabei kann beispielsweise ein digitales Scheckheft Ihres Gebäudes aufgebaut
-                            werden, um den Werterhalt langfristig zu gewährleisten und zu verifizieren.</div>
+                        <div class="slidecard-content-text slidecard-content-text-1">Die standardisierten digitalen
+                            3D-Modelle bilden die Grundlagen für eine automatisierte Verwaltung der Gebäude. Somit kann
+                            ein digitales Scheckheft Ihres Gebäudes aufgebaut werden, um den Werterhalt langfristig zu
+                            gewährleisten und zu verifizieren.​</div>
 
 
                     </div>
@@ -361,7 +363,7 @@
                     <h1>1</h1>
                     <h2>Modellierung</h2>
                     <p>M1 baut Gebäudemodelle auf und strukturiert diese intelligent – dadurch sind die aufgebauten
-                        Modelle für die Bauherrschaft sinnvoll nutzbar.</p>
+                        Modelle für die Bauherrschaft sinnvoll über den gesamten Lebenszyklus nutzbar.</p>
                 </div>
                 <div class="col box box-2 d-flex">
                     <h1>2</h1>
@@ -422,52 +424,106 @@
                 <div class="col">
                     <a class="faqslide faqslide-1">
                         <h3>01</h3>
-                        <p> Frage 1 ?</p>
+                        <p> Was ist ein Bauwerksinformationsmodell? </p>
                     </a>
                     <div class="faqslide-content faqslide-content-1">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi harum sed voluptate
-                            eum saepe libero rerum numquam! Ducimus earum fuga a perferendis tenetur optio
-                            voluptates, provident nam eveniet accusantium.</p>
+                        <p>Ein Bauwerksinformationsmodell (Building Information Model) wird genutzt, um ein Bauvorhaben
+                            digital zu planen, zu optimieren und zu betreiben sowie sämtliche Details zu kommunizieren.
+                        </p>
 
                     </div>
                     <a class="faqslide faqslide-2">
                         <h3>02</h3>
-                        <p> Frage 2 ?</p>
+                        <p> Was ist BIM</p>
                     </a>
                     <div class="faqslide-content faqslide-content-2">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi harum sed voluptate
-                            eum saepe libero rerum numquam! Ducimus earum fuga a perferendis tenetur optio
-                            voluptates, provident nam eveniet accusantium.</p>
+                        <p>BIM (Building Information Modeling) ist ein Arbeitsmethodik, die auf einem 3-D-Modell eines
+                            Gebäudes basiert, das in einer objektorientierten (intelligenten) Modellierungssoftware
+                            erstellt wurde. Sobald das Modell erstellt ist, kann es zur Unterstützung bei Entwurfs-,
+                            Bau- und Betriebsaufgaben verwendet oder auch als Kommunikationswerkzeug eingesetzt werden.
+                            Das Ziel dieser Arbeitsmethodik ist es somit eine partnerschaftliche Projektzusammenarbeit
+                            aller Projektbeteiligten zu fördern, die Transparenz der Prozesse zu erhöhen und
+                            dementsprechend eine erhöhte Projektqualität bei geringen Baukosten und -zeiten zu
+                            gewährleisten. </p>
 
                     </div>
                     <a class="faqslide faqslide-3">
                         <h3>03</h3>
-                        <p> Frage 3 ?</p>
+                        <p> Was bedeutet 7D?</p>
                     </a>
                     <div class="faqslide-content faqslide-content-3">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi harum sed voluptate
-                            eum saepe libero rerum numquam! Ducimus earum fuga a perferendis tenetur optio
-                            voluptates, provident nam eveniet accusantium.</p>
+                        <p>7D bezieht sich auf alle (bisherigen) Dimensionen von BIM, wobei die 3. Dimension als
+                            digitale Darstellung des Bauwerks, die 4. Dimension als Zeit und die 5. Dimension als Kosten
+                            betrachtet wird. In Zukunft wird die Referenz so modifiziert werden, dass sie 6D
+                            (Nachhaltigkeit) und 7D (Facility Management) umfasst.</p>
 
                     </div>
                     <a class="faqslide faqslide-4">
                         <h3>04</h3>
-                        <p> Frage 4 ?</p>
+                        <p> Welche Anwendungsbereiche bietet BIM? </p>
                     </a>
                     <div class="faqslide-content faqslide-content-4">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi harum sed voluptate
-                            eum saepe libero rerum numquam! Ducimus earum fuga a perferendis tenetur optio
-                            voluptates, provident nam eveniet accusantium.</p>
+                        <p>Die meisten Unternehmen (insbesondere KMUs) beginnen damit BIM in Teilbereichen zu verwenden.
+                            Die Liste dieser Teilbereiche von BIM ist sehr umfangreich. Für Unternehmen, die am Beginn
+                            ihrer digitalen Reise stehen, stellt die folgende Liste einige der Standardanwendungen dar,
+                            die häufig Anwendung finden: - Visualisierung – Koordiniation -
+                            Kollisionsprüfung/-vermeidung - Entwurfsvalidierung - Planung von
+                            Bauabläufen/Phasenplänen/Logistik - Marketing-Präsentationen - Analyse von Optionen -
+                            Walk-throughs und Fly-throughs. </p>
 
                     </div>
                     <a class="faqslide faqslide-5">
                         <h3>05</h3>
-                        <p> Frage 5 ?</p>
+                        <p> Was sind Vorteile von BIM?</p>
                     </a>
                     <div class="faqslide-content faqslide-content-5">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi harum sed voluptate
-                            eum saepe libero rerum numquam! Ducimus earum fuga a perferendis tenetur optio
-                            voluptates, provident nam eveniet accusantium.</p>
+                        <p>
+                            <ul>
+                                <li>Unterstützung beim Scoping während der Angebotsabgabe und beim Kauf </li>
+                                <li>Überprüfung von Teilen des Spielraums für Analysen wie Value Engineering </li>
+                                <li>Koordination der Bauabfolge (selbst wenn nur für zwei Gewerke) </li>
+                                <li>Demonstration von Projektansätzen bei Marketing-Präsentationen </li>
+                                <li>Die Fähigkeit, Kollisionen zu erkennen (z.B. Identifizierung von Rohrleitungen, die
+                                    sich mit Bauteilen schneiden). </li>
+                                <li>Die Fähigkeit, zu visualisieren, was in einer simulierten Umgebung gebaut werden
+                                    soll. </li>
+                                <li>Weniger Fehler und Korrekturen auf dem Gebiet </li>
+                                <li>Höhere Zuverlässigkeit der zu erwartenden Feldbedingungen, wodurch sich die
+                                    Möglichkeit ergibt, mehr Vorfertigung von Materialien außerhalb des Standorts
+                                    durchzuführen, was normalerweise eine höhere Qualität zu niedrigeren Kosten bedeutet
+                                </li>
+                                <li>Die Möglichkeit, mehr "Was-wäre-wenn"-Szenarien zu erstellen, z.B. Prüfung
+                                    verschiedener Sequenzierungsoptionen, Standortlogistik, Hebezeugalternativen, Kosten
+                                    usw. </li>
+                                <li>Die Fähigkeit für nicht-technische Personen (Kunden, Benutzer usw.), das Endprodukt
+                                    zu visualisieren. </li>
+                                <li>Weniger Rückrufe und damit geringere Garantiekosten. </li>
+                            </ul>
+                        </p>
+
+                    </div>
+                    <a class="faqslide faqslide-5">
+                        <h3>06</h3>
+                        <p> Was sind Hindernisse für die Umsetzung durch die Industrie? </p>
+                    </a>
+                    <div class="faqslide-content faqslide-content-5">
+                        <p>Der Paradigmenwechsel: BIM wird die Art und Weise, wie die Baubranche arbeitet, verändern.
+                            Das typische Top-Down-Organigramm wird für BIM nicht funktionieren, weil mehr Zusammenarbeit
+                            erforderlich ist. Dies wird zu einer Barriere, weil alte Praktiken nur schwer zu überwinden
+                            sind. Technologie & Software - ohne Industriestandards und Interoperabilität kann es
+                            schwierig sein, Gebäudemodelle gemeinsam zu nutzen. Dies stellt ein Problem dar, weil BIM
+                            Zusammenarbeit erfordert. </p>
+
+                    </div>
+                    <a class="faqslide faqslide-5">
+                        <h3>07</h3>
+                        <p> Welche Hindernisse werden bei der Implementierung auftreten? </p>
+                    </a>
+                    <div class="faqslide-content faqslide-content-5">
+                        <p>Zunächst die Ängste: Jeder muss die Rechts- und Risikoängste, die Angst vor Veränderungen,
+                            die Angst vor dem Unbekannten usw. überwinden. - Software-Lernkurven - Mangelnde
+                            Unterstützung durch die Unternehmensleitung - Mangelnde Unterstützung durch das
+                            Betriebspersonal - Anfängliche Investitionskosten. </p>
 
                     </div>
                 </div>
