--- a/index.html
+++ b/index.html
@@ -151,12 +151,11 @@
 
 
 
-        <section class="header navto" id="home">
+        <section class="header navto d-flex justify-content-center align-items-center" id="home">
 
-            <div class="wrapper">
 
-                <div class="flex-grid align-items-center">
-                    <div class="col d-flex justify-content-center align-items-center">
+
+
                         <div class="card">
                             <div class="card-heading">
                                 <h2 class="card-heading">MODULAR <p>ONE</p>
@@ -168,41 +167,40 @@
                             </div>
 
                         </div>
-                    </div>
-                </div>
 
-            </div>
+
+
 
         </section>
 
 
 
         <section class="digital navto" id="digitalisierung">
-            <div class="wrapp-rellax">
+            <!-- <div class="wrapp-rellax">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
                         <br>
                     </div>
                 </div>
                 <div class="wrapp-rellax-col">
-                    <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                    <div class="wrapp-rellax-col-container">
                         <br>
                     </div>
                 </div>
                 <div class="wrapp-rellax-col">
-                    <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                    <div class="wrapp-rellax-col-container">
                         <br>
                     </div>
                 </div>
                 <div class="wrapp-rellax-col">
-                    <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                    <div class="wrapp-rellax-col-container">
                         <div class="rellax" style="transition: transform 5s cubic-bezier(0,1,.5,1);"
                             data-rellax-speed="-3" data-rellax-percentage="0">
                             <img width="150" src="img/pattern/3cube.svg" alt="">
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="wrapper">
 
 
@@ -210,18 +208,21 @@
                 <h1 class="heading-1 digitalisierung-cap-heading">Revolution der Baubranche</h1>
                 <div class="flex-grid align-items-center">
                     <div class="col d-flex justify-content-center">
-                        <div class="frame" style="height:600px">
+                        <div class="frame">
                             <div class="frame-pic frame-pic-1">
-                                <p class="frame-text frame-text-1"><span>BIM</span></p>
+                                <p class="frame-text frame-text-1"><span>3D</span></p>
                             </div>
                             <div class="frame-pic frame-pic-2">
-                                <p class="frame-text frame-text-1"><span>7D</span></p>
+                                <p class="frame-text frame-text-1"><span>4D</span></p>
                             </div>
                             <div class="frame-pic frame-pic-3">
-                                <p class="frame-text frame-text-1"><span>VR / AR</span></p>
+                                <p class="frame-text frame-text-1"><span>5D</span></p>
                             </div>
                             <div class="frame-pic frame-pic-4">
-                                <p class="frame-text frame-text-1"><span>AUF</span></p>
+                                <p class="frame-text frame-text-1"><span>6D</span></p>
+                            </div>
+                            <div class="frame-pic frame-pic-5">
+                                <p class="frame-text frame-text-1"><span>7D</span></p>
                             </div>
                         </div>
 
@@ -264,7 +265,7 @@
         </section>
 
         <section class="bim5d navto" id="bim5d">
-            <div class="wrapp-rellax">
+            <!-- <div class="wrapp-rellax">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
                         <div class="rellax" style="transition: transform 5s cubic-bezier(0,1,.5,1);"
@@ -277,7 +278,7 @@
                     <br>
                 </div>
                 <div class="wrapp-rellax-col">
-                    <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                    <div class="wrapp-rellax-col-container">
                         <br>
                     </div>
                 </div>
@@ -289,7 +290,7 @@
                     </div>
                 </div>
             </div>
-    </div>
+            </div> -->
     <div class="wrapper">
 
         <h1 class="heading-1 bim5d-cap-heading">Vorteile</h1>
@@ -310,9 +311,9 @@
 
                         <div class="slidecard-content-heading slidecard-content-heading-1">01/ Planen</div>
 
-                        <div class="slidecard-content-text slidecard-content-text-1">In der Planungsphase werden die
-                            Grundlagen für den weiteren standardisierbaren Prozess geschaffen. Durch
-                            Kollisionsprüfungen, VR-Nutzung und Bauablaufsimulationen werden Fehler frühzeitig
+                        <div class="slidecard-content-text slidecard-content-text-1">In der Planungsphase wer&shy;den die
+                            Grundlagen für den weiteren stan&shy;dard&shy;isier&shy;baren Prozess geschaffen. Durch
+                            Kollisionsprüfungen, VR-Nutzung und Bau&shy;ab&shy;lauf&shy;simulationen werden Fehler frühzeitig
                             ausgeschlossen und die Bauherrschaft bestmöglich miteinbezogen.​</div>
 
 
@@ -392,19 +393,19 @@
     </section>
 
     <section class="faq navto" id="faq">
-        <div class="wrapp-rellax">
+        <!-- <div class="wrapp-rellax">
             <div class="wrapp-rellax-col">
                 <div class="wrapp-rellax-col-container">
                     <br>
                 </div>
             </div>
             <div class="wrapp-rellax-col">
-                <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                <div class="wrapp-rellax-col-container">
                     <br>
                 </div>
             </div>
             <div class="wrapp-rellax-col">
-                <div class="wrapp-rellax-col-container" style="padding-left: 15rem;">
+                <div class="wrapp-rellax-col-container">
                     <br>
                 </div>
             </div>
@@ -416,7 +417,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="wrapper">
             <h1 class="heading-1 faq-cap-heading">FAQ</h1>
 
@@ -536,42 +537,34 @@
     <section class="wir navto" id="wir">
         <div class="wrapper">
             <h1 class="heading-1 wir-cap-heading">Kontakt</h1>
-            <div class="flex-grid">
-                <div class="col justify-content-center">
-                    <div class="contact">
-                        <h2>Aus der Branche</h2>
-                        <ul>
-                            <li>Sie besitzen hohe fachliche Expertise</li>
-                            <li>Sie haben noch keine (oder unzureichende) digitale Strategie, um Ihre
-                                Arbeitsprozesse stetig
-                                zu optimieren.</li>
-                        </ul>
-                        <p>Dann werden Sie Teil des innovativen Modular One Ökosystems - profitieren Sie von unserem
-                            Netzwerk, Erfahrungen anderer Beteiligter und der jahrelangen Expertise im digitalen
-                            Bausegment.</p>
-                        <div class="contact-foot">
-                            <a href="#" class="contact-foot-frame contact-foot-frame-1">
-                                <img class="contact-foot-icon contact-foot-icon-1" src="img/icons/phone-solid.svg"
-                                    alt="">
-                            </a>
-                            <a href="#" class="contact-foot-frame contact-foot-frame-2">
-                                <img class="contact-foot-icon contact-foot-icon-2" src="img/icons/envelope-solid.svg"
-                                    alt="">
-                            </a>
-                        </div>
+            <div class="flex-grid justify-content-center align-items-center">
+                <div class="col ">
+
+                    <div class="digital-text">
+                        <h4 class="digital-text-header">Ihr Anliegen – Unsere Mission</h4>
+                        <p class="digital-text-absatz">
+                            Sie möchten Ihren Gebäudebestand digitalisieren (2D Pläne zu einem 3D Modelle) oder planen ein Bauprojekt das digital gestärkt werden soll?
+
+
+                        </p>
+                        <p class="digital-text-absatz" style="margin-top: 1rem;">
+                            Sie sind generell an den Dimensionen von BIM und den damit einhergehenden Vorteilen interessiert?
+
+                    
+                        </p>
+                        <p class="digital-text-absatz" style="margin-top: 1rem;">
+                            Sie und Ihr Unternehmen haben Interesse an Datenstrukturen, KI, Simulationen oder Automatisierungen für das Bausegment?
+
+                        </p>
+                    </div>
+
+                    <div>
+
                     </div>
                 </div>
-                <div class="col justify-content-center">
+                <div class="col d-flex justify-content-center align-items-center">
                     <div class="contact">
-                        <h2>Sie sind Bauherr</h2>
-                        <ul>
-                            <li>planen ein Bauprojekt</li>
-                            <li>wollen Kosten und Bauzeiten reduzieren sowie Ihre Projektqualität erhöhen</li>
-                            <li>dauerhaft, ortsunabhängig und präzise über Ihr Projekt informiert sein</li>
-                            <li>datenbasierten Wissenstransfer der Projekte</li>
-                            <li>digitales Controlling ihrer Projekte</li>
-                            <li>nachhaltige Aspekte integrieren</li>
-                        </ul>
+                        <h2>Interesse geweckt ?</h2>
                         <p>Zögern Sie nicht uns unverbindlich zu kontaktieren – wir freuen uns auf das Gespräch!</p>
                         <div class="contact-foot">
                             <a href="#" class="contact-foot-frame contact-foot-frame-1">
@@ -656,13 +649,13 @@
     <script src="js/slidecard.js"></script>
     <script src="js/slideshow.js"></script>
     <script src="js/rellax.min.js"></script>
-    <script>
-        // Accepts any class name
+    <!-- <script>
+        
         var rellax = new Rellax('.rellax', {});
         var rellax = new Rellax('.rellaxh', {
             horizontal: true
         });
-    </script>
+    </script> -->
     <script src="js/faq.js"></script>
     <script src="js/mobilenav.js"></script>
 
