--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,7 @@
 
     <section class="impressum" id="digitalisierung">
         <div class="wrapper">
-            <h1>Impressum</h1>
+            <h1 class="heading-1 active-dark">Impressum</h1>
 
 
             <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
