--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,9 +44,9 @@
 
 
 
-    <section class="datenschutz">
+    <section class="datenschutz ">
         <div class="wrapper">
-            <h1>Datenschutz</h1>
+            <h1 class="heading-1 active-dark">Datenschutz</h1>
             <p>Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders hohen
                 Stellenwert für die Geschäftsleitung der Modular One GmbH. Eine Nutzung der Internetseiten der Modular
                 One GmbH ist grundsätzlich ohne jede Angabe personenbezogener Daten möglich. Sofern eine betroffene
