--- a/impressum.html
+++ b/impressum.html
@@ -54,7 +54,7 @@
                 Ludwigstra&szlig;e 56<br />
                 35390 Gie&szlig;en</p>
 
-            <p>Handelsregister: HRB 1234x<br />
+            <p>Handelsregister: HRB 9747<br />
                 Registergericht: Amtsgericht Gie&szlig;en</p>
 
             <p><strong>Vertreten durch:</strong><br />
@@ -63,7 +63,7 @@
                 Sascha Homfeld</p>
 
             <h2>Kontakt</h2>
-            <p>Telefon: &#91;Telefonnummer&#93;<br />
+            <p>Telefon: +49 641 20990515<br />
                 E-Mail: info@m-1.de</p>
 
             <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2>
