--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
         <section class="digital navto" id="digitalisierung">
-            <div class="wrapp-rellax-1">
+            <div class="wrapp-rellax wrapp-rellax-1">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
                         <br>
@@ -258,13 +258,10 @@
         </section>
 
         <section class="bim5d navto" id="bim5d">
-            <div class="wrapp-rellax-2">
+            <div class="wrapp-rellax wrapp-rellax-2">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
-                        <div class="rellax" style="transition: transform 5s cubic-bezier(0,1,.5,1);"
-                            data-rellax-speed="3" data-rellax-percentage="3">
-                            <img width="100" src="img/pattern/2cube.svg" alt="">
-                        </div>
+                        <br>
                     </div>
                 </div>
                 <div class="wrapp-rellax-col">
@@ -272,7 +269,10 @@
                 </div>
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
-                        <br>
+                        <div class="rellax" style="transition: transform 5s cubic-bezier(0,1,.5,1);"
+                        data-rellax-speed="2.3" data-rellax-percentage="4">
+                        <img width="100" src="img/pattern/2cube.svg" alt="">
+                    </div>
                     </div>
                 </div>
                 <div class="wrapp-rellax-col">
@@ -379,7 +379,7 @@
     </section>
 
     <section class="faq navto" id="faq">
-        <div class="wrapp-rellax-3">
+        <div class="wrapp-rellax wrapp-rellax-3">
             <div class="wrapp-rellax-col">
                 <div class="wrapp-rellax-col-container">
                     <br>
