--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <nav class="overlay-menu">
                 <ul>
                     <li><a href="#home">M1</a></li>
-                    <li><a href="#digitalisierung">New Normal</a></li>
-                    <li><a href="#bim5d">Potentiale</a></li>
-                    <li><a href="#boxes">Prozess</a></li>
+                    <li><a href="#newnormal">New Normal</a></li>
+                    <li><a href="#potentiale">Potentiale</a></li>
+                    <li><a href="#prozess">Prozess</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#wir">Kontakt</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -101,14 +101,14 @@
                         <p class="number home-nav-item">001</p>
                         <p class="titel home-nav-item">M1</p>
                     </a></li>
-                <li><a id="navline-digitalisierung" class="show navsign" href="#digitalisierung">
+                <li><a id="navline-digitalisierung" class="show navsign" href="#newnormal">
                         <div class="sideline">
                             <div class="inner digitalisierung-nav-item"></div>
                         </div>
                         <p class="number digitalisierung-nav-item">002</p>
                         <p class="titel digitalisierung-nav-item">New Normal</p>
                     </a></li>
-                <li><a id="navline-bim5d" class="show navsign" href="#bim5d">
+                <li><a id="navline-bim5d" class="show navsign" href="#potentiale">
                         <div class="sideline">
                             <div class="inner bim5d-nav-item"></div>
                         </div>
@@ -116,7 +116,7 @@
                         <p class="titel bim5d-nav-item">Potentiale</p>
                     </a></li>
 
-                <li><a id="navline-boxes" class="show navsign" href="#boxes">
+                <li><a id="navline-boxes" class="show navsign" href="#prozess">
                         <div class="sideline">
                             <div class="inner boxes-nav-item"></div>
                         </div>
@@ -130,7 +130,7 @@
                         <p class="number faq-nav-item">005</p>
                         <p class="titel faq-nav-item">FAQ</p>
                     </a></li>
-                <li><a id="navline-wir" class="show navsign" href="#wir">
+                <li><a id="navline-wir" class="show navsign" href="#kontakt">
                         <div class="sideline">
                             <div class="inner wir-nav-item"></div>
                         </div>
@@ -175,7 +175,7 @@
 
 
 
-        <section class="digital navto" id="digitalisierung">
+        <section class="digital navto" id="newnormal">
             <div class="wrapp-rellax wrapp-rellax-1">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
@@ -257,7 +257,7 @@
             </div>
         </section>
 
-        <section class="bim5d navto" id="bim5d">
+        <section class="bim5d navto" id="potentiale">
             <div class="wrapp-rellax wrapp-rellax-2">
                 <div class="wrapp-rellax-col">
                     <div class="wrapp-rellax-col-container">
@@ -289,7 +289,7 @@
         <h1 class="heading-1 bim5d-cap-heading">Potentiale</h1>
 
         <div class="flex-grid">
-            <div class="col d-flex justify-content-center">
+            <div class="col d-flex justify-content-center align-items-center">
                 <div class="slidecard">
                     <div class="slidecard-nav">
 
@@ -347,7 +347,7 @@
 
 
 
-    <section class="boxes navto" id="boxes">
+    <section class="boxes navto" id="prozess">
         <div class="wrapper">
             <h1 class="heading-1 boxes-cap-heading">Modular One Prozess</h1>
         </div>
@@ -476,7 +476,7 @@
 
     </section>
 
-    <section class="wir navto" id="wir">
+    <section class="wir navto" id="kontakt">
         <div class="wrapper">
             <h1 class="heading-1 wir-cap-heading">Kontakt</h1>
             <div class="flex-grid justify-content-center align-items-center">
@@ -518,6 +518,10 @@
                                     alt="">
                             </a>
                         </div>
+                        <div class="contact-foot2">
+                            <div>+49 641 20990515</div><div>info@m-1.de</div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
